CKAD/lightning-lab-2/3-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-busybox
  namespace: dev2406
spec:
  nodeName: master
  containers:
  - image: busybox
    name: secret
    args:
    - /bin/sh
    - -c
    - sleep 3600
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secret-volume
      readOnly: true
  volumes:
  - name: secret-volume
    secret: 
      secretName: dotfile-secret
